--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ urls:
 
 author_logo: profile.jpg
 author: Jarence Casisirano
-author_bio: Hi, my name is Jarence Casisirano. I am a Geodetic Engineer specializing in geoinformatics and remote sensing. :D
+author_bio: I’m Jarence Casisirano, a Geodetic Engineer with deep interests in remote sensing and earth observation, geoinformatics and cartography, geospatial data science, and systems development. I explore how spatial data, statistical analysis, and open-source technologies can be combined to solve real-world problems — from satellite image interpretation to building GIS-powered tools and applications.
 author_email: "jarencecasisirano@gmail.com"
 author_location: Philippines
 author_website_url: "https://jareo.xyz"
