Work on Portfolio Website
Got vast majority of it done, just have to fill w/ _posts for my projects on github

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: Portfolio
+subtitle: Software Engineering
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://nwmorrison.github.io/" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
@@ -12,70 +12,73 @@ urls:
       url: /
     - text: About
       url: /about
-    - text: Blog
+    - text: Projects
       url: /blog
     - text: Gallery
       url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact
-      url : /contact
+#    - text: Shop
+#      url : /shop
+#    - text: Contact
+#      url : /contact
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author_logo: nashProfilePicture.jpg
+author: Nash William Morrison
+author_bio: Welcome to my software engineering profile! My name is Nash Morrison, a passionate and driven software engineer with a strong foundation built through an ABET-accredited engineering program. This accreditation ensures that my education met rigorous global standards in areas like mathematics, computing, engineering principles, and ethical practice, preparing me to tackle complex challenges and contribute meaningfully to the tech industry.
+  
+  Through this profile, I aim to share my work, collaborate with fellow professionals, and continue growing within the ever-evolving world of software development. Thanks for stopping by, I look forward to connecting with you!
+author_email: "nwmorrison1086@eagle.fgcu.edu"
+author_location: Fort Myers, Florida
+author_website_url: "www.youtube.com/@NashWMorrison"
+typewrite-text: Welcome to my Software Engineering Portfolio.
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: Connors Steak & Seafood
+              company_logo: logo_connors.png
+              company_url: https://www.connorsrestaurant.com/fort-myers-fl-steakhouse.html
+              designation: Waiter
+              description: Fine Dining
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+            - company_name: P.F. Chang's
+              company_logo: pfchangs_logo.tmb-0.png
+              company_url: https://www.pfchangs.com/
+              designation: Waiter
+              description: Fast-Paced Environment
               visibility: true
 
 # Education
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+              - college_logo: fgcu_logo.png
+                college_name: Florida Gulf Coast University
+                college_url: https://www.fgcu.edu/
+                college_degree: Software Engineer
+                description: Bachelor of Science
                 visibility: true
 
 # Projects
 author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
+              - project_thumbnail: tetris.jpg
+                project_title: -Py-tris-
+                project_description: Built Tetris using Python
+                project_url: https://github.com/NWMorrison/-Py-tris-
                 visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
+              - project_thumbnail: mctesters.png
+                project_title: McDonald's Automation Testing
+                project_description: Group project utilizing Maven Repository
+                project_url: https://github.com/NWMorrison/McTesters
                 visibility: true
 
 # social links
-twitter_username: xplor4r
-github_username:  sujaykundu777
-instagram_username: xplor4r
+# twitter_username: xplor4r
+linkedin_username: nashwmorrison
+github_username:  NWMorrison
+youtube_username: NashWMorrison
+# instagram_username: xplor4r
 # facebook_username: johndoe
-# linkedin_username: johndoe
 # behance_username: johndoe
 # medium_username: johndoe
 # telegram_username: johndoe
@@ -91,11 +94,11 @@ instagram_username: xplor4r
 wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+#mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: 83b703c3-9e47-4df4-ac55-e24d7eb02abc
-formspree_email: johndoe@gmail.com
+#formspree_email: johndoe@gmail.com
 
 # releases - widget can be (sidebar, modal or embed)
 olvy_organization: devlopr
