--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ author_education_details:
                 college_url: https://www.fgcu.edu/
                 college_degree: Software Engineering
                 description: Bachelor of Science
+                college_gpa: GPA [3.80]
                 visibility: true
 
 # Projects
