--- a/_config.yml
+++ b/_config.yml
@@ -68,12 +68,12 @@ author_project_details:
                 visibility: true
 
 # social links
-# twitter_username: xplor4r
+# twitter_username:
 linkedin_username: nashwmorrison
 github_username:  NWMorrison
 youtube_username: NashWMorrison
-# instagram_username: xplor4r
-# facebook_username: johndoe
+# instagram_username:
+# facebook_username:
 # telegram_username:
 
 # wakatime username (coding activity)
