--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Portfolio
-subtitle: B.S. Software Engineer
+subtitle: B.S. Software Engineering
 description: >- # this means to ignore newlines until "baseurl:"
   
 
